--- a/index.html
+++ b/index.html
@@ -127,9 +127,13 @@
 </section>
 
 <!-- DIVIDER BETWEEN WELCOME & WHY US -->
-<div class="section-divider">
+<div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" alt="Mira Creations Divider Logo - Premium Event Decor and Jewelry" class="specialize-logo" />
+  <img src="images/Logo-Black.png" 
+       alt="Mira Creations logo used as decorative section divider" 
+       class="specialize-logo"
+       loading="lazy" 
+       aria-hidden="true" />
   <div class="specialize-line"></div>
 </div>
 
@@ -142,9 +146,13 @@
 </section>
 
 <!-- DIVIDER BETWEEN WHY US & SERVICES -->
-<div class="section-divider">
+<div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <img src="images/Logo-Black.png" 
+       alt="Mira Creations logo used as decorative section divider" 
+       class="specialize-logo"
+       loading="lazy" 
+       aria-hidden="true" />
   <div class="specialize-line"></div>
 </div>
 
@@ -196,9 +204,13 @@
 </section>
 
 <!-- DIVIDER BETWEEN SERVICES & CONTACT -->
-<div class="section-divider">
+<div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <img src="images/Logo-Black.png" 
+       alt="Mira Creations logo used as decorative section divider" 
+       class="specialize-logo"
+       loading="lazy" 
+       aria-hidden="true" />
   <div class="specialize-line"></div>
 </div>
 
