--- a/index.html
+++ b/index.html
@@ -258,30 +258,40 @@
 </footer>
 
 <!-- Floating Contact Ribbon + Arrow -->
-<div class="contact-tab-wrapper" id="contactTab">
+<div class="contact-tab-wrapper" id="contactTab" role="button" aria-label="Open contact information" tabindex="0">
   <!-- Label + Arrow inside their own wrapper -->
-  <div class="contact-arrow-wrapper">
+  <div class="contact-arrow-wrapper" aria-hidden="true">
     <div class="contact-label-over-arrow">Contact Information</div>
-    <img src="images/arrow.png" class="contact-arrow-image" alt="Arrow" />
+    <img 
+      src="images/arrow.png" 
+      class="contact-arrow-image" 
+      alt="Arrow pointing to contact tab"
+      loading="lazy"
+      aria-hidden="true" />
   </div>
 
-  <!-- The yellow clickable tab -->
-  <div class="contact-tab"></div>
+  <!-- The yellow clickable tab (decorative only) -->
+  <div class="contact-tab" aria-hidden="true"></div>
 </div>
-
 
 <!-- Overlay and Popup Card -->
-<div class="contact-overlay" id="contactOverlay">
-  <div class="contact-popup">
-    <h3>Contact Information</h3>
-    <p><strong>Location:</strong> Edmonton, Alberta</p>
-    <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
-    <p><strong>Email:</strong> <a href="mailto:mira.creations@outlook.com">mira.creations@outlook.com</a></p>
-    <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a></p>
-    <p><strong>TikTok:</strong> <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a></p>
+<div class="contact-overlay" id="contactOverlay" role="dialog" aria-modal="true" aria-label="Contact Details">
+  <div class="contact-popup" itemscope itemtype="https://schema.org/LocalBusiness">
+    <meta itemprop="name" content="Mira Creations" />
+    <meta itemprop="url" content="https://miradecorandjewellery.com/" />
+    <meta itemprop="image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
+
+    <h3 role="heading" aria-level="3">Contact Information</h3>
+    <p><strong>Location:</strong> <span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+      <span itemprop="addressLocality">Edmonton</span>, <span itemprop="addressRegion">AB</span>
+    </span></p>
+    <p><strong>Phone:</strong> <a href="tel:5877090058" itemprop="telephone">587-709-0058</a></p>
+    <p><strong>Email:</strong> <a href="mailto:mira.creations@outlook.com" itemprop="email">mira.creations@outlook.com</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/mira.creations1" target="_blank" rel="noopener">@mira.creations1</a></p>
+    <p><strong>TikTok:</strong> <a href="https://tiktok.com/@mira.creations1" target="_blank" rel="noopener">@mira.creations1</a></p>
   </div>
 </div>
-
+  
 <!-- MOBILE HEADER/MENU -->
 <div class="mobile-nav" id="mobileNav">
   <nav class="mobile-menu-links">
