--- a/index.html
+++ b/index.html
@@ -75,28 +75,44 @@
   
 <body>
 
-  <!-- HEADER AND MENU -->
-  <header class="main-header">
-    <a href="/" class="header-left">
-      <div class="logo-container header-logo-container">
-        <img src="images/Logo-Purple.png" class="welcome-logo purple-logo" alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" />
-        <img src="images/Logo-Black.png" class="welcome-logo black-logo" alt="Elegant Black Mira Creations Logo for Wedding Decor Business" />
-      </div>
-      <div class="brand-text">
-        <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
-      </div>
-    </a>
-    <nav class="main-nav">
-      <a href="/">Home</a>
-      <a href="AboutUs/">About Us</a>
-      <a href="Gallery/">Gallery</a>
-      <a href="ContactUs/">Contact Us</a>
-    </nav>
-    <div class="header-right">
-       <button class="quote-button" onclick="window.location.href='ContactUs/'">Free Quote</button>
-</div>
-  </header>
+<!-- HEADER AND MENU -->
+<header class="main-header" role="banner">
+  <a href="/" class="header-left" aria-label="Mira Creations homepage">
+    <div class="logo-container header-logo-container">
+      <img 
+        src="images/Logo-Purple.png" 
+        class="welcome-logo purple-logo" 
+        alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" 
+        loading="lazy" 
+        aria-hidden="true" />
+      <img 
+        src="images/Logo-Black.png" 
+        class="welcome-logo black-logo" 
+        alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
+        loading="lazy" 
+        aria-hidden="true" />
+    </div>
+    <div class="brand-text">
+      <div class="brand-title">MIRA CREATIONS</div>
+      <div class="brand-subtitle">JEWELLERY AND DECOR</div>
+    </div>
+  </a>
+
+  <nav class="main-nav" role="navigation" aria-label="Main menu">
+    <a href="/">Home</a>
+    <a href="AboutUs/">About Us</a>
+    <a href="Gallery/">Gallery</a>
+    <a href="ContactUs/">Contact Us</a>
+  </nav>
+
+  <div class="header-right">
+    <button class="quote-button" 
+            onclick="window.location.href='ContactUs/'" 
+            aria-label="Request a free quote from Mira Creations">
+      Free Quote
+    </button>
+  </div>
+</header>
 
   <!-- HAMBURGER MENU -->
     <div class="hamburger" id="hamburger">
@@ -106,26 +122,40 @@
   </div>
 
 <!-- WELCOME SECTION -->
-<section class="welcome-section">
+<section class="welcome-section" role="region" aria-label="Welcome to Mira Creations homepage introduction">
   <div class="welcome-spacer"></div>
+  
   <div class="welcome-content">
     <div class="logo-container welcome-logo-container">
-      <img src="images/Logo-Purple.png" class="welcome-logo purple-logo" alt="Mira Creations Purple Logo for Weddings and Event Styling in Edmonton" />
-      <img src="images/Logo-Black.png" class="welcome-logo black-logo" alt="Elegant Black Mira Creations Logo for Wedding Decor Business" />
+      <img 
+        src="images/Logo-Purple.png" 
+        class="welcome-logo purple-logo" 
+        alt="Mira Creations Purple Logo for Weddings and Event Styling in Edmonton" 
+        loading="lazy" 
+        aria-hidden="true" />
+      <img 
+        src="images/Logo-Black.png" 
+        class="welcome-logo black-logo" 
+        alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
+        loading="lazy" 
+        aria-hidden="true" />
     </div>
+
     <h1 class="welcome-title">Welcome to Mira Creations</h1>
     <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewellery</h2>
-    <p class="welcome-location">Proudly Serving Edmonton and Surrounding Areas</p>
-    <div class="scroll-indicator">
+    <p class="welcome-location">Proudly serving Edmonton, Alberta and the surrounding area with premium event styling and jewelry services.</p>
+
+    <div class="scroll-indicator" aria-label="Scroll down to see available services">
       <a href="#services">
         <span>Scroll to see our Services</span>
         <span class="down-arrow">↓</span>
       </a>
     </div>
   </div>
+
   <div class="welcome-footer-spacer"></div>
 </section>
-
+  
 <!-- DIVIDER BETWEEN WELCOME & WHY US -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
@@ -138,10 +168,15 @@
 </div>
 
 <!-- WHY US SECTION -->
-<section id="why-us" class="why-us-section">
+<section id="why-us" class="why-us-section" role="region" aria-label="Why choose Mira Creations for your event">
   <div class="why-us-content">
     <h2 class="specialize-title" role="heading" aria-level="2">Why Choose Us</h2>
-    <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewellery. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
+    <p>
+      At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated <strong>event decor and jewellery</strong>. Whether you're planning a wedding, cultural celebration, or special event in <strong>Edmonton</strong> or the surrounding area, we provide personalized service, premium craftsmanship, and timeless designs that reflect your unique style.
+    </p>
+    <p>
+      With a deep understanding of tradition and a flair for the modern, we make every detail count—so you can focus on making memories.
+    </p>
   </div>
 </section>
 
@@ -245,15 +280,16 @@
 </section>
 
 <!-- FOOTER SECTION -->
-<footer class="site-footer">
+<footer class="site-footer" role="contentinfo" aria-label="Website footer">
   <div class="footer-content">
-    <p>&copy; 2025 Mira Creations. All rights reserved.</p>
-    <div class="footer-links">
+    <p>&copy; <span id="year">2025</span> Mira Creations. All rights reserved.</p>
+    
+    <nav class="footer-links" aria-label="Footer navigation">
       <a href="/">Home</a>
       <a href="AboutUs/">About</a>
       <a href="Gallery/">Gallery</a>
       <a href="ContactUs/">Contact Us</a>
-    </div>
+    </nav>
   </div>
 </footer>
 
@@ -293,13 +329,17 @@
 </div>
   
 <!-- MOBILE HEADER/MENU -->
-<div class="mobile-nav" id="mobileNav">
+<div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/">Home</a>
     <a href="AboutUs/">About Us</a>
     <a href="Gallery/">Gallery</a>
     <a href="ContactUs/">Contact Us</a>
-    <button class="mobile-quote-button" onclick="window.location.href='ContactUs/'">Free Quote</button>
+    <button class="mobile-quote-button" 
+            onclick="window.location.href='ContactUs/'" 
+            aria-label="Request a free quote from Mira Creations">
+      Free Quote
+    </button>
   </nav>
 </div>
   
