--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -2,37 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="robots" content="index, follow">
-  <title>MiraCreations</title>
-  <link rel="stylesheet" href="/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us | Mira Creations – Event Decor and Jewellery in Edmonton</title>
+
+  <meta name="description" content="Get in touch with Mira Creations for custom event decor, jewellery, and wedding styling in Edmonton. Contact us for a free quote or consultation." />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs/" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Contact Us | Mira Creations" />
+  <meta property="og:description" content="Reach out to Mira Creations for event decor and jewellery consultations in Edmonton. Request a quote today." />
+  <meta property="og:image" content="https://miradecorandjewellery.com/images/og-contact.jpg" />
+  <meta property="og:url" content="https://miradecorandjewellery.com/ContactUs/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact Us | Mira Creations" />
+  <meta name="twitter:description" content="Contact Mira Creations for decor and jewellery services in Edmonton. Free quotes available." />
+  <meta name="twitter:image" content="https://miradecorandjewellery.com/images/og-contact.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Mira Creations",
+    "image": "https://miradecorandjewellery.com/images/og-contact.jpg",
+    "url": "https://miradecorandjewellery.com/",
+    "telephone": "+1-587-709-0058",
+    "email": "mira.creations@outlook.com",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Edmonton",
+      "addressRegion": "AB",
+      "addressCountry": "CA"
+    },
+    "sameAs": [
+      "https://instagram.com/mira.creations1",
+      "https://tiktok.com/@mira.creations1"
+    ]
+  }
+  </script>
 </head>
-<body>
+
 
 <!-- HEADER AND MENU -->
-  <header class="main-header">
-    <a href="/" class="header-left">
-      <div class="logo-container header-logo-container">
-        <img src="/images/Logo-Purple.png" class="logo header-logo purple-logo" />
-        <img src="/images/Logo-Black.png" class="logo header-logo black-logo" />
-      </div>
-      <div class="brand-text">
-        <div class="brand-title">MIRA CREATIONS</div>
-        <div class="brand-subtitle">JEWELLERY AND DECOR</div>
-      </div>
-    </a>
-    <nav class="main-nav">
-      <a href="/">Home</a>
-      <a href="/AboutUs">About Us</a>
-      <a href="/Gallery">Gallery</a>
-      <a href="/ContactUs">Contact Us</a>
-    </nav>
-    <div class="header-right">
-      <button class="quote-button" onclick="window.location.href='/ContactUs'">Free Quote</button>
-</div>
-  </header>
+<header class="main-header" role="banner">
+  <a href="/" class="header-left" aria-label="Mira Creations homepage">
+    <div class="logo-container header-logo-container">
+      <img 
+        src="images/Logo-Purple.png" 
+        class="welcome-logo purple-logo" 
+        alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" 
+        loading="lazy" 
+        aria-hidden="true" />
+      <img 
+        src="images/Logo-Black.png" 
+        class="welcome-logo black-logo" 
+        alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
+        loading="lazy" 
+        aria-hidden="true" />
+    </div>
+    <div class="brand-text">
+      <div class="brand-title">MIRA CREATIONS</div>
+      <div class="brand-subtitle">JEWELLERY AND DECOR</div>
+    </div>
+  </a>
+
+  <nav class="main-nav" role="navigation" aria-label="Main menu">
+    <a href="/">Home</a>
+    <a href="AboutUs/">About Us</a>
+    <a href="Gallery/">Gallery</a>
+    <a href="ContactUs/">Contact Us</a>
+  </nav>
+
+  <div class="header-right">
+    <button class="quote-button" 
+            onclick="window.location.href='ContactUs/'" 
+            aria-label="Request a free quote from Mira Creations">
+      Free Quote
+    </button>
+  </div>
+</header>
 
   <!-- HAMBURGER MENU -->
     <div class="hamburger" id="hamburger">
@@ -41,67 +96,74 @@
     <span></span>
   </div>
 
-<!-- CONTACT PAGE TITLE -->
-<section class="contact-hero">
+<!-- CONTACT PAGE SECTION -->
+<section class="contact-hero" role="region" aria-label="Contact Mira Creations in Edmonton">
   <h1>Contact Us</h1>
-  <p>Let us help make your event unforgettable. Reach out for a free quote today.</p>
+  <p>Let us help make your event unforgettable. Contact Mira Creations in Edmonton for expert event decor and jewellery services. Request your free quote today.</p>
 
-<!-- CONTACT ICON ROW -->
-<div class="contact-icons-row">
-  <div class="contact-item">
-    <i class="fas fa-phone-alt"></i>
-    <a href="tel:5877090058" target="_blank">587-709-0058</a>
+  <!-- CONTACT ICON ROW -->
+  <div class="contact-icons-row" role="list" aria-label="Contact Methods">
+    <div class="contact-item" role="listitem">
+      <i class="fas fa-phone-alt" aria-hidden="true"></i>
+      <a href="tel:5877090058" aria-label="Call Mira Creations at 587 709 0058">587-709-0058</a>
+    </div>
+    <div class="contact-item" role="listitem">
+      <i class="fas fa-envelope" aria-hidden="true"></i>
+      <a href="mailto:mira.creations@outlook.com" aria-label="Email Mira Creations">mira.creations@outlook.com</a>
+    </div>
+    <div class="contact-item" role="listitem">
+      <i class="fab fa-instagram" aria-hidden="true"></i>
+      <a href="https://instagram.com/mira.creations1" target="_blank" rel="noopener" aria-label="Visit our Instagram profile">@mira.creations1</a>
+    </div>
+    <div class="contact-item" role="listitem">
+      <i class="fab fa-tiktok" aria-hidden="true"></i>
+      <a href="https://tiktok.com/@mira.creations1" target="_blank" rel="noopener" aria-label="Visit our TikTok profile">@mira.creations1</a>
+    </div>
   </div>
-  <div class="contact-item">
-    <i class="fas fa-envelope"></i>
-    <a href="mailto:mira.creations@outlook.com" target="_blank">mira.creations@outlook.com</a>
-  </div>
-  <div class="contact-item">
-    <i class="fab fa-instagram"></i>
-    <a href="https://instagram.com/mira.creations1" target="_blank">@mira.creations1</a>
-  </div>
-  <div class="contact-item">
-    <i class="fab fa-tiktok"></i>
-    <a href="https://tiktok.com/@mira.creations1" target="_blank">@mira.creations1</a>
-  </div>
-</div>
 
-<!-- CONTACT FORM -->
-<div class="quote-section">
-  <h2>Request a Free Quote</h2>
-  <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <input type="tel" name="phone" placeholder="Your Phone Number" required />
-    <textarea name="message" placeholder="How can we help you?" required></textarea>
-    <button type="submit">Send Message</button>
-  </form>
-</div>
+  <!-- CONTACT FORM -->
+  <div class="quote-section" role="form" aria-labelledby="quote-heading">
+    <h2 id="quote-heading">Request a Free Quote</h2>
+    <form action="https://formsubmit.io/send/mira.creations@outlook.com" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required aria-label="Your Name" />
+      <input type="email" name="email" placeholder="Your Email" required aria-label="Your Email" />
+      <input type="tel" name="phone" placeholder="Your Phone Number" required aria-label="Your Phone Number" />
+      <textarea name="message" placeholder="How can we help you?" required aria-label="Your Message"></textarea>
+      <button type="submit" aria-label="Submit Contact Form">Send Message</button>
+    </form>
+  </div>
 </section>
   
 <!-- FOOTER SECTION -->
-<footer class="site-footer">
+<footer class="site-footer" role="contentinfo" aria-label="Website footer">
   <div class="footer-content">
-    <p>&copy; 2025 Mira Creations. All rights reserved.</p>
-    <div class="footer-links">
+    <p>&copy; <span id="year">2025</span> Mira Creations. All rights reserved.</p>
+    
+    <nav class="footer-links" aria-label="Footer navigation">
       <a href="/">Home</a>
-      <a href="/AboutUs">About</a>
-      <a href="/Gallery">Gallery</a>
-      <a href="/ContactUs">Contact Us</a>
-    </div>
+      <a href="AboutUs/">About</a>
+      <a href="Gallery/">Gallery</a>
+      <a href="ContactUs/">Contact Us</a>
+    </nav>
   </div>
 </footer>
 
+
 <!-- MOBILE HEADER/MENU -->
-<div class="mobile-nav" id="mobileNav">
+<div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/">Home</a>
-    <a href="/AboutUs">About Us</a>
-    <a href="/Gallery">Gallery</a>
-    <a href="/ContactUs">Contact Us</a>
-    <button class="mobile-quote-button" onclick="window.location.href='/ContactUs'">Free Quote</button>
+    <a href="AboutUs/">About Us</a>
+    <a href="Gallery/">Gallery</a>
+    <a href="ContactUs/">Contact Us</a>
+    <button class="mobile-quote-button" 
+            onclick="window.location.href='ContactUs/'" 
+            aria-label="Request a free quote from Mira Creations">
+      Free Quote
+    </button>
   </nav>
 </div>
+
   
 <!-- MOBILE SCRIPTS -->
 
