--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -52,11 +52,73 @@
     "description": "Mira Creations is a family-run wedding and event decor company based in Edmonton. We specialize in South Asian celebrations and jewelry for special occasions."
   }
   </script>
+  <script type="application/ld+json">
+  [
+    {
+      "@context": "https://schema.org",
+      "@type": "Review",
+      "reviewBody": "Mira Creations made our wedding day magical! The decor was breathtaking and elegant.",
+      "author": {
+        "@type": "Person",
+        "name": "Amandeep & Harjit"
+      },
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "name": "Mira Creations",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Edmonton",
+          "addressRegion": "AB",
+          "addressCountry": "CA"
+        }
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Review",
+      "reviewBody": "Professional, thoughtful, and beautiful designs. Our baby shower was perfect.",
+      "author": {
+        "@type": "Person",
+        "name": "Gurwinder Singh"
+      },
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "name": "Mira Creations",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Edmonton",
+          "addressRegion": "AB",
+          "addressCountry": "CA"
+        }
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "Review",
+      "reviewBody": "The entire Mira Team was incredible to work with. They brought our Diwali event to life with vibrant, meaningful decor.",
+      "author": {
+        "@type": "Person",
+        "name": "Jasleen & Kiran"
+      },
+      "itemReviewed": {
+        "@type": "LocalBusiness",
+        "name": "Mira Creations",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Edmonton",
+          "addressRegion": "AB",
+          "addressCountry": "CA"
+        }
+      }
+    }
+  ]
+  </script>
 
   <!-- Styles and Fonts -->
   <link rel="stylesheet" href="/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 </head>
+
   
 <body class="about-page">
 
