--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -202,27 +202,21 @@
 <section class="testimonial-carousel" role="region" aria-label="Client Testimonials">
   <h2 class="testimonial-title" role="heading" aria-level="2">What Our Clients Say</h2>
   
-  <div class="carousel-container" itemscope itemtype="https://schema.org/Review">
+  <div class="carousel-container">
     <div class="carousel-track">
       <div class="testimonial-slide active">
-        <blockquote itemprop="reviewBody">“Mira Creations made our wedding day magical! The decor was breathtaking and elegant.”</blockquote>
-        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
-          <span itemprop="name">Amandeep & Harjit</span>
-        </cite>
+        <blockquote>“Mira Creations made our wedding day magical! The decor was breathtaking and elegant.”</blockquote>
+        <cite>Amandeep & Harjit</cite>
       </div>
       
-      <div class="testimonial-slide" itemscope itemtype="https://schema.org/Review">
-        <blockquote itemprop="reviewBody">“Professional, thoughtful, and beautiful designs. Our baby shower was perfect.”</blockquote>
-        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
-          <span itemprop="name">Gurwinder Singh</span>
-        </cite>
+      <div class="testimonial-slide">
+        <blockquote>“Professional, thoughtful, and beautiful designs. Our baby shower was perfect.”</blockquote>
+        <cite>Gurwinder Singh</cite>
       </div>
       
-      <div class="testimonial-slide" itemscope itemtype="https://schema.org/Review">
-        <blockquote itemprop="reviewBody">“The entire Mira Team was incredible to work with. They brought our Diwali event to life with vibrant, meaningful decor.”</blockquote>
-        <cite itemprop="author" itemscope itemtype="https://schema.org/Person">
-          <span itemprop="name">Jasleen & Kiran</span>
-        </cite>
+      <div class="testimonial-slide">
+        <blockquote>“The entire Mira Team was incredible to work with. They brought our Diwali event to life with vibrant, meaningful decor.”</blockquote>
+        <cite>Jasleen & Kiran</cite>
       </div>
     </div>
 
@@ -231,7 +225,6 @@
     <button class="carousel-btn next" aria-label="Next testimonial">&#10095;</button>
   </div>
 </section>
-
 
 <!-- DIVIDER BETWEEN REVIEW & GALLERY SECTIONS -->
 <div class="section-divider" role="presentation" aria-hidden="true">
