--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -127,13 +127,13 @@
   <a href="/" class="header-left" aria-label="Mira Creations homepage">
     <div class="logo-container header-logo-container">
       <img 
-        src="images/Logo-Purple.png" 
+        src="/images/Logo-Purple.png" 
         class="welcome-logo purple-logo" 
         alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" 
         loading="lazy" 
         aria-hidden="true" />
       <img 
-        src="images/Logo-Black.png" 
+        src="/images/Logo-Black.png" 
         class="welcome-logo black-logo" 
         alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
         loading="lazy" 
@@ -147,14 +147,14 @@
 
   <nav class="main-nav" role="navigation" aria-label="Main menu">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
   </nav>
 
   <div class="header-right">
     <button class="quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
@@ -190,7 +190,7 @@
 <!-- DIVIDER BETWEEN FOUNDER & REVIEW SECTIONS -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
+  <img src="/images/Logo-Black.png" 
        alt="Mira Creations logo used as decorative section divider" 
        class="specialize-logo"
        loading="lazy" 
@@ -229,7 +229,7 @@
 <!-- DIVIDER BETWEEN REVIEW & GALLERY SECTIONS -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
+  <img src="/images/Logo-Black.png" 
        alt="Mira Creations logo used as decorative section divider" 
        class="specialize-logo"
        loading="lazy" 
@@ -251,7 +251,7 @@
 <!-- DIVIDER BETWEEN GALLERY & CONTACT SECTIONS -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
+  <img src="/images/Logo-Black.png" 
        alt="Mira Creations logo used as decorative section divider" 
        class="specialize-logo"
        loading="lazy" 
@@ -296,9 +296,9 @@
     
     <nav class="footer-links" aria-label="Footer navigation">
       <a href="/">Home</a>
-      <a href="AboutUs/">About</a>
-      <a href="Gallery/">Gallery</a>
-      <a href="ContactUs/">Contact Us</a>
+      <a href="/AboutUs/">About</a>
+      <a href="/Gallery/">Gallery</a>
+      <a href="/ContactUs/">Contact Us</a>
     </nav>
   </div>
 </footer>
@@ -309,7 +309,7 @@
   <div class="contact-arrow-wrapper" aria-hidden="true">
     <div class="contact-label-over-arrow">Contact Information</div>
     <img 
-      src="images/arrow.png" 
+      src="/images/arrow.png" 
       class="contact-arrow-image" 
       alt="Arrow pointing to contact tab"
       loading="lazy"
@@ -343,11 +343,11 @@
 <div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
     <button class="mobile-quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
