--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -50,13 +50,13 @@
   <a href="/" class="header-left" aria-label="Mira Creations homepage">
     <div class="logo-container header-logo-container">
       <img 
-        src="images/Logo-Purple.png" 
+        src="/images/Logo-Purple.png" 
         class="welcome-logo purple-logo" 
         alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" 
         loading="lazy" 
         aria-hidden="true" />
       <img 
-        src="images/Logo-Black.png" 
+        src="/images/Logo-Black.png" 
         class="welcome-logo black-logo" 
         alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
         loading="lazy" 
@@ -70,14 +70,14 @@
 
   <nav class="main-nav" role="navigation" aria-label="Main menu">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
   </nav>
 
   <div class="header-right">
     <button class="quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
@@ -108,16 +108,16 @@
     <h2 role="heading" aria-level="2">Wedding Decor</h2>
     <div class="carousel-wrapper">
       <div class="carousel track-wedding">
-        <img src="/images/gallery/wedding1.jpg" loading="lazy" alt="Luxurious red and gold wedding stage decor with draped fabrics and floral arches in Edmonton" />
-        <img src="/images/gallery/wedding2.jpg" loading="lazy" alt="Elegant wedding reception setup with white drapes and floral backdrop by Mira Creations" />
-        <img src="/images/gallery/wedding3.jpg" loading="lazy" alt="Traditional mandap arrangement with gold pillars and marigold garlands" />
-        <img src="/images/gallery/wedding4.jpg" loading="lazy" alt="Wedding head table decor with candles, rose petals, and custom signage" />
-        <img src="/images/gallery/wedding5.jpg" loading="lazy" alt="Stage layout for Sikh wedding with cream draping and soft floral arrangements" />
-        <img src="/images/gallery/wedding1.jpg" loading="lazy" alt="Repeat: Luxurious red and gold wedding stage decor" class="clone" />
-        <img src="/images/gallery/wedding2.jpg" loading="lazy" alt="Repeat: Elegant reception with floral backdrop" class="clone" />
-        <img src="/images/gallery/wedding3.jpg" loading="lazy" alt="Repeat: Mandap with gold and marigold decor" class="clone" />
-        <img src="/images/gallery/wedding4.jpg" loading="lazy" alt="Repeat: Head table with candles and petals" class="clone" />
-        <img src="/images/gallery/wedding5.jpg" loading="lazy" alt="Repeat: Cream draping with floral setup" class="clone" />
+        <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Luxurious red and gold wedding stage decor with draped fabrics and floral arches in Edmonton" />
+        <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Elegant wedding reception setup with white drapes and floral backdrop by Mira Creations" />
+        <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Traditional mandap arrangement with gold pillars and marigold garlands" />
+        <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Wedding head table decor with candles, rose petals, and custom signage" />
+        <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Stage layout for Sikh wedding with cream draping and soft floral arrangements" />
+        <img src="/images/gallery/wedding1.jpg" loading="eager" alt="Repeat: Luxurious red and gold wedding stage decor" class="clone" />
+        <img src="/images/gallery/wedding2.jpg" loading="eager" alt="Repeat: Elegant reception with floral backdrop" class="clone" />
+        <img src="/images/gallery/wedding3.jpg" loading="eager" alt="Repeat: Mandap with gold and marigold decor" class="clone" />
+        <img src="/images/gallery/wedding4.jpg" loading="eager" alt="Repeat: Head table with candles and petals" class="clone" />
+        <img src="/images/gallery/wedding5.jpg" loading="eager" alt="Repeat: Cream draping with floral setup" class="clone" />
       </div>
     </div>
   </div>
@@ -127,16 +127,16 @@
     <h2 role="heading" aria-level="2">Special Events Decor</h2>
     <div class="carousel-wrapper">
       <div class="carousel track-event">
-        <img src="/images/gallery/event1.jpg" loading="lazy" alt="Pastel-themed baby shower with balloon arch and custom backdrop by Mira Creations" />
-        <img src="/images/gallery/event2.jpg" loading="lazy" alt="Birthday party decor with gold and black table settings and streamers" />
-        <img src="/images/gallery/event3.jpg" loading="lazy" alt="Anniversary celebration setup with candlelit centerpieces and rose petals" />
-        <img src="/images/gallery/event4.jpg" loading="lazy" alt="Cultural event decor featuring traditional fabric hangings and warm lighting" />
-        <img src="/images/gallery/event5.jpg" loading="lazy" alt="Graduation party setup with large balloon arch and gold-themed decor" />
-        <img src="/images/gallery/event1.jpg" loading="lazy" alt="Repeat: Baby shower decor with balloons and signage" class="clone" />
-        <img src="/images/gallery/event2.jpg" loading="lazy" alt="Repeat: Birthday decor with black and gold accents" class="clone" />
-        <img src="/images/gallery/event3.jpg" loading="lazy" alt="Repeat: Anniversary decor with candles and florals" class="clone" />
-        <img src="/images/gallery/event4.jpg" loading="lazy" alt="Repeat: Cultural event with fabric decor" class="clone" />
-        <img src="/images/gallery/event5.jpg" loading="lazy" alt="Repeat: Graduation party decor with balloons" class="clone" />
+        <img src="/images/gallery/event1.jpg" loading="eager" alt="Pastel-themed baby shower with balloon arch and custom backdrop by Mira Creations" />
+        <img src="/images/gallery/event2.jpg" loading="eager" alt="Birthday party decor with gold and black table settings and streamers" />
+        <img src="/images/gallery/event3.jpg" loading="eager" alt="Anniversary celebration setup with candlelit centerpieces and rose petals" />
+        <img src="/images/gallery/event4.jpg" loading="eager" alt="Cultural event decor featuring traditional fabric hangings and warm lighting" />
+        <img src="/images/gallery/event5.jpg" loading="eager" alt="Graduation party setup with large balloon arch and gold-themed decor" />
+        <img src="/images/gallery/event1.jpg" loading="eager" alt="Repeat: Baby shower decor with balloons and signage" class="clone" />
+        <img src="/images/gallery/event2.jpg" loading="eager" alt="Repeat: Birthday decor with black and gold accents" class="clone" />
+        <img src="/images/gallery/event3.jpg" loading="eager" alt="Repeat: Anniversary decor with candles and florals" class="clone" />
+        <img src="/images/gallery/event4.jpg" loading="eager" alt="Repeat: Cultural event with fabric decor" class="clone" />
+        <img src="/images/gallery/event5.jpg" loading="eager" alt="Repeat: Graduation party decor with balloons" class="clone" />
       </div>
     </div>
   </div>
@@ -146,16 +146,16 @@
     <h2 role="heading" aria-level="2">Jewellery</h2>
     <div class="carousel-wrapper">
       <div class="carousel track-jewellery">
-        <img src="/images/gallery/jewellery1.jpg" loading="lazy" alt="Gold bridal necklace with intricate kundan work and dangling pearls for wedding styling" />
-        <img src="/images/gallery/jewellery2.jpg" loading="lazy" alt="Statement earrings with gold and red stones displayed on soft velvet tray" />
-        <img src="/images/gallery/jewellery3.jpg" loading="lazy" alt="Bridal jewellery choker with white stones and floral motif from Mira Creations" />
-        <img src="/images/gallery/jewellery4.jpg" loading="lazy" alt="Pakistani wedding necklace set with matching jhumka earrings and traditional detailing" />
-        <img src="/images/gallery/jewellery5.jpg" loading="lazy" alt="Classic bridal jewellery ensemble in red and gold tones for Indian weddings" />
-        <img src="/images/gallery/jewellery1.jpg" loading="lazy" alt="Repeat: Gold bridal kundan necklace with pearl detail" class="clone" />
-        <img src="/images/gallery/jewellery2.jpg" loading="lazy" alt="Repeat: Gold and red statement earrings on display" class="clone" />
-        <img src="/images/gallery/jewellery3.jpg" loading="lazy" alt="Repeat: White stone choker with floral motif" class="clone" />
-        <img src="/images/gallery/jewellery4.jpg" loading="lazy" alt="Repeat: Traditional Pakistani jhumka necklace" class="clone" />
-        <img src="/images/gallery/jewellery5.jpg" loading="lazy" alt="Repeat: Red and gold bridal jewellery set" class="clone" />
+        <img src="/images/gallery/jewellery1.jpg" loading="eager" alt="Gold bridal necklace with intricate kundan work and dangling pearls for wedding styling" />
+        <img src="/images/gallery/jewellery2.jpg" loading="eager" alt="Statement earrings with gold and red stones displayed on soft velvet tray" />
+        <img src="/images/gallery/jewellery3.jpg" loading="eager" alt="Bridal jewellery choker with white stones and floral motif from Mira Creations" />
+        <img src="/images/gallery/jewellery4.jpg" loading="eager" alt="Pakistani wedding necklace set with matching jhumka earrings and traditional detailing" />
+        <img src="/images/gallery/jewellery5.jpg" loading="eager" alt="Classic bridal jewellery ensemble in red and gold tones for Indian weddings" />
+        <img src="/images/gallery/jewellery1.jpg" loading="eager" alt="Repeat: Gold bridal kundan necklace with pearl detail" class="clone" />
+        <img src="/images/gallery/jewellery2.jpg" loading="eager" alt="Repeat: Gold and red statement earrings on display" class="clone" />
+        <img src="/images/gallery/jewellery3.jpg" loading="eager" alt="Repeat: White stone choker with floral motif" class="clone" />
+        <img src="/images/gallery/jewellery4.jpg" loading="eager" alt="Repeat: Traditional Pakistani jhumka necklace" class="clone" />
+        <img src="/images/gallery/jewellery5.jpg" loading="eager" alt="Repeat: Red and gold bridal jewellery set" class="clone" />
       </div>
     </div>
   </div>
@@ -165,16 +165,16 @@
     <h2 role="heading" aria-level="2">Suits and Kurtas</h2>
     <div class="carousel-wrapper">
       <div class="carousel track-clothing">
-        <img src="/images/gallery/clothing1.jpg" loading="lazy" alt="Traditional men's kurta in navy with gold embroidery, displayed on hanger" />
-        <img src="/images/gallery/clothing2.jpg" loading="lazy" alt="Women's embroidered suit set in pastel peach with matching dupatta" />
-        <img src="/images/gallery/clothing3.jpg" loading="lazy" alt="Designer Punjabi kurta set for grooms with subtle beige and red threadwork" />
-        <img src="/images/gallery/clothing4.jpg" loading="lazy" alt="Silk suit set in maroon with matching accessories laid out on table" />
-        <img src="/images/gallery/clothing5.jpg" loading="lazy" alt="Modern kurta outfit with minimalist design and neutral tones" />
-        <img src="/images/gallery/clothing1.jpg" loading="lazy" alt="Repeat: Navy kurta with gold embroidery" class="clone" />
-        <img src="/images/gallery/clothing2.jpg" loading="lazy" alt="Repeat: Peach suit with embroidered details" class="clone" />
-        <img src="/images/gallery/clothing3.jpg" loading="lazy" alt="Repeat: Beige groom kurta with red threadwork" class="clone" />
-        <img src="/images/gallery/clothing4.jpg" loading="lazy" alt="Repeat: Maroon silk suit with accessories" class="clone" />
-        <img src="/images/gallery/clothing5.jpg" loading="lazy" alt="Repeat: Minimalist neutral-toned kurta outfit" class="clone" />
+        <img src="/images/gallery/clothing1.jpg" loading="eager" alt="Traditional men's kurta in navy with gold embroidery, displayed on hanger" />
+        <img src="/images/gallery/clothing2.jpg" loading="eager" alt="Women's embroidered suit set in pastel peach with matching dupatta" />
+        <img src="/images/gallery/clothing3.jpg" loading="eager" alt="Designer Punjabi kurta set for grooms with subtle beige and red threadwork" />
+        <img src="/images/gallery/clothing4.jpg" loading="eager" alt="Silk suit set in maroon with matching accessories laid out on table" />
+        <img src="/images/gallery/clothing5.jpg" loading="eager" alt="Modern kurta outfit with minimalist design and neutral tones" />
+        <img src="/images/gallery/clothing1.jpg" loading="eager" alt="Repeat: Navy kurta with gold embroidery" class="clone" />
+        <img src="/images/gallery/clothing2.jpg" loading="eager" alt="Repeat: Peach suit with embroidered details" class="clone" />
+        <img src="/images/gallery/clothing3.jpg" loading="eager" alt="Repeat: Beige groom kurta with red threadwork" class="clone" />
+        <img src="/images/gallery/clothing4.jpg" loading="eager" alt="Repeat: Maroon silk suit with accessories" class="clone" />
+        <img src="/images/gallery/clothing5.jpg" loading="eager" alt="Repeat: Minimalist neutral-toned kurta outfit" class="clone" />
       </div>
     </div>
   </div>
@@ -192,7 +192,7 @@
 <!-- DIVIDER BETWEEN GALLERY & CONTACT SECTIONS -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
+  <img src="/images/Logo-Black.png" 
        alt="Mira Creations logo used as decorative section divider" 
        class="specialize-logo"
        loading="lazy" 
@@ -239,9 +239,9 @@
     
     <nav class="footer-links" aria-label="Footer navigation">
       <a href="/">Home</a>
-      <a href="AboutUs/">About</a>
-      <a href="Gallery/">Gallery</a>
-      <a href="ContactUs/">Contact Us</a>
+      <a href="/AboutUs/">About</a>
+      <a href="/Gallery/">Gallery</a>
+      <a href="/ContactUs/">Contact Us</a>
     </nav>
   </div>
 </footer>
@@ -253,7 +253,7 @@
   <div class="contact-arrow-wrapper" aria-hidden="true">
     <div class="contact-label-over-arrow">Contact Information</div>
     <img 
-      src="images/arrow.png" 
+      src="/images/arrow.png" 
       class="contact-arrow-image" 
       alt="Arrow pointing to contact tab"
       loading="lazy"
@@ -286,11 +286,11 @@
 <div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
     <button class="mobile-quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
