--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -55,13 +55,13 @@
   <a href="/" class="header-left" aria-label="Mira Creations homepage">
     <div class="logo-container header-logo-container">
       <img 
-        src="images/Logo-Purple.png" 
+        src="/images/Logo-Purple.png" 
         class="welcome-logo purple-logo" 
         alt="Mira Creations Purple Logo for Weddings and Event Decor and Jewellery in Edmonton" 
         loading="lazy" 
         aria-hidden="true" />
       <img 
-        src="images/Logo-Black.png" 
+        src="/images/Logo-Black.png" 
         class="welcome-logo black-logo" 
         alt="Elegant Black Mira Creations Logo for Wedding Decor Business" 
         loading="lazy" 
@@ -75,14 +75,14 @@
 
   <nav class="main-nav" role="navigation" aria-label="Main menu">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
   </nav>
 
   <div class="header-right">
     <button class="quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
@@ -141,9 +141,9 @@
     
     <nav class="footer-links" aria-label="Footer navigation">
       <a href="/">Home</a>
-      <a href="AboutUs/">About</a>
-      <a href="Gallery/">Gallery</a>
-      <a href="ContactUs/">Contact Us</a>
+      <a href="/AboutUs/">About</a>
+      <a href="/Gallery/">Gallery</a>
+      <a href="/ContactUs/">Contact Us</a>
     </nav>
   </div>
 </footer>
@@ -153,11 +153,11 @@
 <div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/">Home</a>
-    <a href="AboutUs/">About Us</a>
-    <a href="Gallery/">Gallery</a>
-    <a href="ContactUs/">Contact Us</a>
+    <a href="/AboutUs/">About Us</a>
+    <a href="/Gallery/">Gallery</a>
+    <a href="/ContactUs/">Contact Us</a>
     <button class="mobile-quote-button" 
-            onclick="window.location.href='ContactUs/'" 
+            onclick="window.location.href='/ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
       Free Quote
     </button>
