--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -47,6 +47,10 @@
     ]
   }
   </script>
+  
+  <!-- Styles and Fonts -->
+  <link rel="stylesheet" href="/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 </head>
 
 
