--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -72,7 +72,7 @@
     <a href="/">Home</a>
     <a href="/AboutUs/">About Us</a>
     <a href="/Gallery/">Gallery</a>
-    <a href="/ContactUs/">Contact Us</a>
+    <a href="/product/">Contact Us</a>
   </nav>
 
   <div class="header-right">
