--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <a href="/">Home</a>
     <a href="AboutUs/">About Us</a>
     <a href="Gallery/">Gallery</a>
-    <a href="Product/">Contact Us</a>
+    <a href="ContactUs/">Contact Us</a>
   </nav>
 
   <div class="header-right">
