--- a/404.html
+++ b/404.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Page Not Found | Mira Creations</title>
-  <link rel="stylesheet" href="style.css" />
+  
+  <!-- ✅ Absolute path to stylesheet -->
+  <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <meta name="robots" content="noindex">
 </head>
 <body>
   <section class="contact-hero">
+    <!-- ✅ Absolute path to logo -->
     <div class="logo-container" style="margin-bottom: 1rem;">
-      <img src="images/Logo-Purple.png" class="welcome-logo" alt="Mira Creations Logo" />
+      <img src="/images/Logo-Purple.png" class="welcome-logo" alt="Mira Creations Logo" />
     </div>
+    
     <h1>404 - Page Not Found</h1>
     <p>Oops! The page you're looking for doesn't exist.</p>
     <p style="margin-top: 1rem;">But no worries — we're here to help!</p>
     <h2>Contact us directly or explore our socials for more information.</h2>
+
     <div class="contact-icons-row">
       <div class="contact-item">
         <i class="fas fa-phone-alt"></i>
@@ -36,7 +41,5 @@
       </div>
     </div>
   </section>
-
-
 </body>
 </html>
