--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="twitter:image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/images/Logo-Purple.jpg" type="image/jpeg" />
 
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
