--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <meta name="keywords" content="event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Edmonton jewellery, Mira Creations, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <link rel="canonical" href="https://miradecorandjewellery.com/" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G51T75TMJY');
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="Event Decor & Jewelry in Edmonton | Mira Creations" />
   <meta property="og:description" content="Luxury wedding and event decor with elegant jewellery collections for your special day in Edmonton." />
