--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -10,6 +10,15 @@
   <meta name="keywords" content="event decor gallery, Edmonton wedding decor, Indian wedding styling, Mira Creations, cultural celebrations, bridal jewellery, South Asian decor Edmonton" />
   <link rel="canonical" href="https://miradecorandjewellery.com/Gallery/" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G51T75TMJY');
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="Gallery | Wedding and Event Decor by Mira Creations in Edmonton" />
   <meta property="og:description" content="Explore our portfolio of decor and jewellery designs for weddings and cultural events in Edmonton." />
