--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -9,6 +9,15 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs/" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G51T75TMJY');
+  </script>
+
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Contact Us | Mira Creations" />
   <meta property="og:description" content="Reach out to Mira Creations for event decor and jewellery consultations in Edmonton. Request a quote today." />
